--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='resources/logo.png') }}">
     <title>SchoolTrip</title>
     <link
       rel="stylesheet"
