--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='resources/logo.png') }}">
-    <title>SchoolTrip</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='travel-together.css') }}"
-    />
-    <link
-      rel="resources"
-      href="{{ url_for('static', filename='resources') }}"
-    />
-    {% block head %}{% endblock %}
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <a href="{{ url_for('main.index') }}">
-          <img src="{{ url_for('static', filename='resources/logo-full.png') }}"  alt="Home" class="header-icon header-logo" />
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='resources/logo.png') }}">
+  <title>SchoolTrip</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='travel-together.css') }}" />
+  <link rel="resources" href="{{ url_for('static', filename='resources') }}" />
+  {% block head %}{% endblock %}
+</head>
+
+<body>
+  <header>
+    <div class="header-container">
+      <a href="{{ url_for('main.index') }}">
+        <img src="{{ url_for('static', filename='resources/logo-full.png') }}" alt="Home"
+          class="header-icon header-logo" />
+      </a>
+      <h1>SchoolTrip</h1>
+      <div class="spacer">
+        {% if current_user.is_authenticated: %}
+        <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
+          <img src="{{ url_for('static', filename='resources/' ~ current_user.profile_pic) }}" alt="Profile"
+            class="header-icon" />
         </a>
-        <h1>SchoolTrip</h1>
-        <div class="spacer">
-          {% if current_user.is_authenticated: %}
-          <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
-            <img src="{{ url_for('static', filename='resources/' ~ current_user.profile_pic) }}" alt="Profile" class="header-icon" />
-          </a>
-          <a href="{{ url_for('auth.logout_post') }}">
-            <p class="logout-button">Log out</p>
-          </a>
-          {% endif %}
-        </div>
+        <a href="{{ url_for('auth.logout_post') }}">
+          <p class="logout-button">Log out</p>
+        </a>
+        {% endif %}
       </div>
-    </header>
-    <section class="content">{% block content %}{% endblock %}</section>
-    <footer><small>Developed for Web Applications</small></footer>
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"></script>
-    {% block scripts %}
-      <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
-    {% endblock %}
-  </body>
+    </div>
+  </header>
+  <section class="content">{% block content %}{% endblock %}</section>
+  <footer><small>Developed for Web Applications</small></footer>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  {% block scripts %}
+  <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
+  {% endblock %}
+</body>
+
 </html>
