Fix profile edit

--- a/travel_together_app/travel_together/templates/main/edit_profile.html
+++ b/travel_together_app/travel_together/templates/main/edit_profile.html
@@ -44,7 +44,7 @@
                         src="{{ url_for('static', filename='resources/' ~ (current_user.profile_pic or 'Defaultpfp.png')) }}">
                 </label>
                 <label for="profile-pic">Change picture</label>
-                <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
+                <input type="file" id="profile-pic" name="profile_pic" accept="image/*">
             </div>
             <div class="righthand-inputs input-flex">
                 <h2>Universities</h2>
