--- a/travel_together_app/travel_together/templates/trip_template.html
+++ b/travel_together_app/travel_together/templates/trip_template.html
@@ -13,7 +13,8 @@
              data-status="{{ trip.status }}"
              data-is-member="{{'true' if current_user in trip.participants else 'false' }}"
              data-home-uni="{{trip.creator.home_uni or ''}}"
-             data-visiting-uni="{{trip.creator.visiting_uni or ''}}">
+             data-visiting-uni="{{trip.creator.visiting_uni or ''}}"
+             data-university-restriction="{{trip.university}}">
             
             <img class="trip-photo" src="{{ url_for('static', filename='resources/' ~ trip.image) }}" alt="{{ trip.title }}">
             <h2 class="trip-title">{{ trip.title }}</h2>    
