--- a/travel_together_app/travel_together/templates/main/browse_trips.html
+++ b/travel_together_app/travel_together/templates/main/browse_trips.html
@@ -64,6 +64,9 @@
     <label>Destination:</label>
     <input type="text" id="destination-filter" name="destination" placeholder="Enter somewhere you'd like to visit...">
 
+    <label>At Your Universities:</label>
+    <input type="checkbox" id="university-filter" name="university" value="1">
+
     <label>Trip Status: </label>
     <select id="status-filter" name="status">
       <option value="OPEN">Open</option>
