--- a/travel_together_app/travel_together/static/css/profile.css
+++ b/travel_together_app/travel_together/static/css/profile.css
@@ -17,6 +17,26 @@
     background-color: rgba(255, 255, 255, 0.531);
 }
 
+.return-button-area {
+    position: fixed;
+    top: 70px;
+    left: 1vw;
+    background-color: none;
+}
+
+#return-button {
+    background: none;
+	color: black;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+}
+
+#return-button:hover {
+    text-decoration: underline;
+}
+
 .pfp {
     width: 10vw;
     height: 10vw;
